Make sure frequencies aren't cut off

--- a/Frontend/CSS/dashboard.css
+++ b/Frontend/CSS/dashboard.css
@@ -91,9 +91,8 @@ div#spinny {
 
 div#currentFrequencies {
     display: block;
-    height: 100px;
     border-top:1px solid grey;
-    margin-top:0px;
+    margin-top:10px;
     padding-top:0.2em;
 }
 
